tests/ui/mismatched_types/closure-mismatch.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `FnOnce<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 (),)>`, for some specific lifetime `'2`

error[E0308]: mismatched types
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'a> Fn<(&'a (),)>`
              found trait `Fn<(&(),)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/closure-mismatch.rs:8:9
   |
LL |     baz(|_| ());
   |         ^^^
note: the lifetime requirement is introduced here
  --> $DIR/closure-mismatch.rs:5:11
   |
LL | fn baz<T: Foo>(_: T) {}
   |           ^^^
help: consider specifying the type of the closure parameters
   |
LL |     baz(|_: &_| ());
   |         ~~~~~~~

error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-mismatch.rs:11:5
   |
LL |     baz(|x| ());
   |     ^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `FnOnce<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 (),)>`, for some specific lifetime `'2`

error[E0308]: mismatched types
  --> $DIR/closure-mismatch.rs:11:5
   |
LL |     baz(|x| ());
   |     ^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'a> Fn<(&'a (),)>`
              found trait `Fn<(&(),)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/closure-mismatch.rs:11:9
   |
LL |     baz(|x| ());
   |         ^^^
note: the lifetime requirement is introduced here
  --> $DIR/closure-mismatch.rs:5:11
   |
LL | fn baz<T: Foo>(_: T) {}
   |           ^^^
help: consider specifying the type of the closure parameters
   |
LL |     baz(|x: &_| ());
   |         ~~~~~~~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
